syntax = "proto3";

service RFIDReaderService {
  rpc Watch( stream WatchRequest) returns (stream WatchResponse){}
}

message WatchRequest {
  oneof request {
    WatchCreateRequest create_request = 1;
    WatchCancelRequest cancel_request = 2;
  }
}

message WatchCreateRequest {}

message WatchCancelRequest {}

message WatchResponse {
  // True if the watch request was succesfully created 
  bool created = 1;
  // True if the watch request was cancelled 
  bool cancelled = 2;
  // Error message if something went wrong
  string error_message = 3;
  // Timestamp of message (currently a string as google.protobuf.Timestamp is not currently supported)
  string timestamp = 4;
  // RFID Tag id value
  string value = 5;
}
